Thu Nov 13 17:14:29 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * ace/config-WinCE.h:
          Added #define ACE_LACKS_ERRNO_H and ACE_LACKS_TIME_H.

        * ace/config-all.h:
        * ace/os_include/os_stddef.h:
          Fixed typo's in rarely accessed #ifdef'd sections.

Thu Nov 13 16:18:30 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * ace/Sock_Connect.cpp:
          Added #include Guard_T.h and Recursive_Thread_Mutex.h when
          ACE_HAS_IPV6 is defined.

Thu Nov 13 16:10:54 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * apps/Gateway/Gateway/File_Parser.cpp:
          Added #include OS_NS_stdlib.h to fix compile errors on HP.

        * examples/Connection/non_blocking/CPP-acceptor.h:
        * examples/Connection/non_blocking/CPP-connector.h:
          Added #include Signal.h to fix compile errors on HP.

Thu Nov 13 16:11:07 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * ace/OS_TLI.h:
          Fixed a typo by changing the test to determine whether or not to
          include os_tcp.h and #undef TCP_NODELY and TCP_MAXSEG to avoid a
          conflict with sys/xti.h from ACE_HAS_BROKEN_XTI_MACROS to
          ACE_HAS_CONFLICTING_XTI_MACROS.  This should fix compile
          problems in HP.

        * ace/os_include/netinet/os_tcp.h:
          Removed the ACE_HAS_CONFLICTING_XTI_MACROS test that #undef'd
          TCP_NODELAY and TCP_MAXSEG.  This only needs to be done prior to
          including sys/xti.h.

Thu Nov 13 04:26:17 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * include/makeinclude/rules.lib.GNU;
          Added # -*- Makefile -*- at the top of the file so emacs will
          highlight the syntax.

        * include/makeinclude/rules.local.GNU:
          Added explicit shared library with version extention to the
          deinstall.local target so that it will get cleaned up even if it
          is only defined as SHLIB_UNCHECKED.
