@@ -1,3 +1,11 @@
+Thu Nov 13 11:27:23 2003  Chad Elliott  <elliott_c@ociweb.com>
+
+        * bin/DependencyGenerator/DependencyEditor.pm:
+        * bin/DependencyGenerator/DependencyGenerator.pm:
+        * bin/depgen.pl:
+
+          Added an option (-n) to produce dependencies with no inline files.
+
 Thu Nov 13 17:14:29 UTC 2003  Don Hinton  <dhinton@dresystems.com>
 
         * ace/config-WinCE.h:
@@ -55,7 +63,7 @@ Thu Nov 13 03:32:14 UTC 2003  Don Hinton  <dhinton@dresystems.com>
           the *_UNCHECKED files.  This is unnecessary and doesn't work
           with specialized targets, see Wed Nov 12 07:40:27 UTC 2003  Don
           Hinton  <dhinton@dresystems.com> for details.
- 
+
 Wed Nov 12 16:55:00 2003  Justin Michel  <michel_j@ociweb.com>
 
         * ace/NT_Service.h:
@@ -102,9 +110,9 @@ Wed Nov 12 16:55:00 2003  Justin Michel  <michel_j@ociweb.com>
         * performance-tests/TTCP/ACE-C++/TTCP_ACE_C++.mpc:
         * performance-tests/UDP/UDP.mpc:
 
-          Imported many misc MPC file fixes from the OCI repository. 
+          Imported many misc MPC file fixes from the OCI repository.
           Imported new mpc and mpb files from the OCI repository.
-          Added missing #include to ace/NT_Service.h that was used by 
+          Added missing #include to ace/NT_Service.h that was used by
             macros defined in this file.
 
 Wed Nov 12 12:43:14 2003  Chad Elliott  <elliott_c@ociweb.com>
